# kyrgyz_adventure

./: .env  .gitignore  package-lock.json  pyproject.toml  start.sh
alembic/: env.py
alembic/versions/: 50140a37a6cd_create_initial_tables.py
app/: __init__.py  db.py
app/api/: kyrgyz_adventure.py
app/core/: main.py
app/models/: kyrgyz_adventure.py
app/services/: kyrgyz_adventure.py
app/static/css/: output.css
app/templates/: base.html  index.html
